perf: ⚡️ ini pioneer update

--- a/packages/pioneer/src/week/2020/17.md
+++ b/packages/pioneer/src/week/2020/17.md
@@ -8,27 +8,27 @@ A focus-oriented virtual workspace that helps you get things done ~Bond. Focus. 
 
 ### We often find the best accomplishment summaries use bullet points to list out what you have done over the past week.
 
-🏁 24 Days Until Launch on 09/17
-📊 4,100 Epic Points
-💅 Complete Refactor UI/UX
-🌈 Introduce 10+ Components
-👤 Refactor Backend Logic
-🚀 Version v1.1.5 -> v1.18.0, Stars 2 -> 4
-💻 322 Commits, 84 PR, 11 Issues
-🚗 Talked to 1 Core Beta User
+🏁 10 Days Until Launch on 09/17
+📊 65,000 Epic Points
+💅 Refactor Space Backend and Form
+🌈 Initiate Custom Analytics
+👤 Billing Subscription w/Stripe
+🚀 Version v1.18.0 -> v1.46.0, Stars 4 -> 4
+💻 346 Commits, 103 PR, 24 Issues
+🚗 Talked to 3 Core Beta Users
 
 ## What do you want to have done by the end of next week?
 
 ### Similar to above, bullet points often work best to describe your plans
 
-🏁 17 Days Until Launch on 09/17
-📊 10,000 Epic Points
+🏁 3 Days Until Launch on 09/17
+📊 100,000 Epic Points
 💅 Complete Asynchronous Video
-🌈 Refactor Space Backend and Form
-👤 Billing Subscription w/Stripe
-🚀 Version v1.30.0 Stars 6
+🌈 Integrate App Status
+👤 Prepare to Launch (LP, Testimonials, Etc...)
+🚀 Version v1.70.0 Stars 10
 💻 300 Commits, 150 PR, 30 Issues
-🚗 Listen to 3 more potential beta users
+🚗 Listen to 10 more potential beta users
 
 ## What would you like feedback on from the community?
 
