--- a/packages/pioneer/src/sus/2020/14.md
+++ b/packages/pioneer/src/sus/2020/14.md
@@ -25,8 +25,8 @@
 ### What most improved your primary metric?
 
 1. 🌈 Days until launch: 10 Days
-2. 🚀 Version v1.18.0 ->
-3. 🚗 Github Stars 4 ->
+2. 🚀 Version v1.18.0 -> v1.46.0
+3. 🚗 Github Stars 4 -> 4
 
 ### Biggest obstacle?
 
