feat: 🎸 upgrade pricing section

--- a/locales/en/pricing.json
+++ b/locales/en/pricing.json
@@ -5,8 +5,9 @@
       "description1": "Unlimited time",
       "description2": "Unlimited users & workspaces",
       "description3": "Unlimited rooms included",
-      "description4": "Designated success team",
-      "description5": "...and much more!",
+      "description4": "Unlimited users per room included",
+      "description5": "Designated success team",
+      "description6": "...and much more!",
       "price": "Custom",
       "title": "Enterprise"
     },
@@ -15,8 +16,9 @@
       "description1": "Unlimited time",
       "description2": "10 users included",
       "description3": "3 rooms included",
-      "description4": "Help center access",
-      "description5": "User Configuration",
+      "description4": "3 users per room included",
+      "description5": "Help center access",
+      "description6": "User Configuration",
       "price": "$0",
       "title": "Free"
     },
@@ -26,9 +28,10 @@
       "buttonText": "Get started",
       "description1": "Unlimited time",
       "description2": "Unlimited users",
-      "description3": "30 rooms included",
-      "description4": "Help center access",
-      "description5": "Advanced User Configuration",
+      "description3": "15 rooms included",
+      "description4": "10 users per room included",
+      "description5": "Help center access",
+      "description6": "Advanced User Configuration",
       "price": "$30",
       "subTitle": "Most popular",
       "title": "Pro"
