--- a/locales/ja/pricing.json
+++ b/locales/ja/pricing.json
@@ -26,10 +26,10 @@
       "buttonText": "始める",
       "description1": "時間無制限",
       "description2": "無制限のユーザー",
-      "description3": "30部屋が含まれています",
+      "description3": "15部屋が含まれています",
       "description4": "ヘルプセンターへのアクセス",
       "description5": "高度なユーザー設定",
-      "price": "3,000円",
+      "price": "3千円",
       "subTitle": "最も人気のある",
       "title": "プロ"
     },
