--- a/locales/ja/pricing.json
+++ b/locales/ja/pricing.json
@@ -5,8 +5,9 @@
       "description1": "時間無制限",
       "description2": "無制限のユーザー",
       "description3": "無制限の部屋が含まれています",
-      "description4": "指定成功チーム",
-      "description5": "...そしてはるかに！",
+      "description4": "部屋ごとの無制限のユーザーが含まれています",
+      "description5": "指定成功チーム",
+      "description6": "...そしてはるかに！",
       "price": "カスタム",
       "title": "企業"
     },
@@ -15,8 +16,9 @@
       "description1": "時間無制限",
       "description2": "10ユーザーを含む",
       "description3": "3部屋が含まれています",
-      "description4": "ヘルプセンターへのアクセス",
-      "description5": "ユーザー構成",
+      "description4": "1部屋あたり3ユーザーが含まれています",
+      "description5": "ヘルプセンターへのアクセス",
+      "description6": "ユーザー構成",
       "price": "0円",
       "title": "自由"
     },
@@ -27,8 +29,9 @@
       "description1": "時間無制限",
       "description2": "無制限のユーザー",
       "description3": "15部屋が含まれています",
-      "description4": "ヘルプセンターへのアクセス",
-      "description5": "高度なユーザー設定",
+      "description4": "1部屋あたり10ユーザーが含まれています",
+      "description5": "ヘルプセンターへのアクセス",
+      "description6": "高度なユーザー設定",
       "price": "3千円",
       "subTitle": "最も人気のある",
       "title": "プロ"
