--- a/locales/zh/pricing.json
+++ b/locales/zh/pricing.json
@@ -5,8 +5,9 @@
       "description1": "无限时间",
       "description2": "无限的用户",
       "description3": "包括无限的房间",
-      "description4": "指定成功团队",
-      "description5": "...以及更多！",
+      "description4": "包括每间客房的无限用户",
+      "description5": "指定成功团队",
+      "description6": "...以及更多！",
       "price": "自订",
       "title": "企业"
     },
@@ -15,8 +16,9 @@
       "description1": "无限时间",
       "description2": "包括10个用户",
       "description3": "包括3间房间",
-      "description4": "帮助中心访问",
-      "description5": "用户配置",
+      "description4": "每间房包括3位用户",
+      "description5": "帮助中心访问",
+      "description6": "用户配置",
       "price": "¥0",
       "title": "自由"
     },
@@ -27,8 +29,9 @@
       "description1": "无限时间",
       "description2": "无限的用户",
       "description3": "包含15间客房",
-      "description4": "帮助中心访问",
-      "description5": "进阶使用者设定",
+      "description4": "包括每间房间10位使用者",
+      "description5": "帮助中心访问",
+      "description6": "进阶使用者设定",
       "price": "¥200",
       "subTitle": "最受欢迎",
       "title": "专业版"
