feat: 🎸 ini home screen

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -26,6 +26,7 @@
     "focus": "Focus",
     "free": "Free",
     "general": "General",
+    "goHome": "Go Home",
     "help": "Help",
     "home": "Home",
     "id": "ID",
