--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -26,6 +26,7 @@
     "focus": "フォーカス",
     "free": "自由",
     "general": "一般的な",
+    "goHome": "家に帰る",
     "help": "助けて",
     "home": "ホーム",
     "id": "ID",
