--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -26,6 +26,7 @@
     "focus": "焦点",
     "free": "自由",
     "general": "一般",
+    "goHome": "回家",
     "help": "救命",
     "home": "家",
     "id": "ID",
