feat: 🎸 refactor user notification settings

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -9,6 +9,7 @@
     "billingGoTo": "Go to Billing",
     "billingUpgrade": "Upgrade Plan",
     "cancel": "Cancel",
+    "chat": "Chat",
     "create": "Create",
     "createRoom": "Create Room",
     "createSpace": "Create a Space",
