--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -9,6 +9,7 @@
     "billingGoTo": "請求に移動",
     "billingUpgrade": "アップグレードプラン",
     "cancel": "キャンセル",
+    "chat": "チャット",
     "create": "作成する",
     "createRoom": "部屋を作成",
     "createSpace": "スペースを作成する",
