--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -9,6 +9,7 @@
     "billingGoTo": "前往帐单",
     "billingUpgrade": "升级计划",
     "cancel": "取消",
+    "chat": "聊天",
     "create": "创造",
     "createRoom": "创建房间",
     "createSpace": "创建一个空间",
