--- a/packages/pioneer/src/sus/2020/15.md
+++ b/packages/pioneer/src/sus/2020/15.md
@@ -4,7 +4,7 @@
 
 ### Weeks to launch
 
-2
+1
 
 ## Users
 
@@ -25,8 +25,8 @@
 ### What most improved your primary metric?
 
 1. 🌈 Days until launch: 3 Days
-2. 🚀 Version v1.46.0
-3. 🚗 Github Stars 4
+2. 🚀 Version v1.46.0 -> v1.73.2
+3. 🚗 Github Stars 4 -> 5
 
 ### Biggest obstacle?
 
