feat: 🎸 ini room color for settings

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -10,6 +10,7 @@
     "billingUpgrade": "Upgrade Plan",
     "cancel": "Cancel",
     "chat": "Chat",
+    "color": "Color",
     "create": "Create",
     "createRoom": "Create Room",
     "createSpace": "Create a Space",
