perf: ⚡️ ini icon for room color

--- a/locales/en/room.json
+++ b/locales/en/room.json
@@ -1,5 +1,6 @@
 {
   "room": {
+    "color": "Color",
     "createRoom": "Create Room",
     "deleteRoom": "Delete Room",
     "editRoom": "Edit Room",
