--- a/locales/en/room.json
+++ b/locales/en/room.json
@@ -1,6 +1,6 @@
 {
   "room": {
-    "color": "Color",
+    "color": "Room Color",
     "createRoom": "Create Room",
     "deleteRoom": "Delete Room",
     "editRoom": "Edit Room",
