--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -70,6 +70,7 @@
     "room": "Room",
     "rooms": "Rooms",
     "score": "Score",
+    "sessions": "Sessions",
     "settings": "Settings",
     "share": "Share",
     "space": "Space",
