--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -32,6 +32,7 @@
     "goHome": "Go Home",
     "help": "Help",
     "home": "Home",
+    "hour": "Hour",
     "id": "ID",
     "invite": "Invite",
     "inviteFrom": "Invite from ",
