feat: 🎸 complete refactor analytics sentrei header

--- a/locales/en/header.json
+++ b/locales/en/header.json
@@ -7,7 +7,7 @@
   },
   "default": {
     "about": "About",
-    "home": "Home",
+    "analytics": "Analytics",
     "pricing": "Pricing",
     "support": "Support"
   },
