--- a/locales/zh/header.json
+++ b/locales/zh/header.json
@@ -7,7 +7,7 @@
   },
   "default": {
     "about": "关于",
-    "home": "家",
+    "analytics": "分析工具",
     "pricing": "价钱",
     "support": "支持"
   },
