--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -32,6 +32,7 @@
     "goHome": "家に帰る",
     "help": "助けて",
     "home": "ホーム",
+    "hour": "時",
     "id": "ID",
     "invite": "招待する",
     "inviteFrom": "から招待",
@@ -70,6 +71,7 @@
     "room": "ルーム",
     "rooms": "部屋",
     "score": "スコア",
+    "sessions": "セッション",
     "settings": "設定",
     "share": "共有",
     "space": "スペース",
