--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -32,6 +32,7 @@
     "goHome": "回家",
     "help": "救命",
     "home": "家",
+    "hour": "小时",
     "id": "ID",
     "invite": "邀请",
     "inviteFrom": "邀请来自",
@@ -70,6 +71,7 @@
     "room": "房间",
     "rooms": "房间数",
     "score": "得分",
+    "sessions": "届会",
     "settings": "设定值",
     "share": "分享",
     "space": "空间",
