feat: 🎸 ini analytics i18n

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -1,6 +1,7 @@
 {
   "footer": {
     "about": "About",
+    "analytics": "Analytics",
     "company": "Company",
     "cookies": "Cookies",
     "legal": "Legal",
