--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -1,6 +1,7 @@
 {
   "footer": {
     "about": "会社について",
+    "analytics": "分析",
     "company": "会社",
     "cookies": "クッキー",
     "legal": "法律関係",
