feat: 🎸 ini root analytics

--- a/locales/en/analytics.json
+++ b/locales/en/analytics.json
@@ -1,5 +1,20 @@
 {
   "analytics": {
     "title": "Analytics"
+  },
+  "label": {
+    "activity": "Activity",
+    "analytics": "Analytics",
+    "duration": "Duration",
+    "invites": "Invites",
+    "members": "Members",
+    "namerooms": "Namerooms",
+    "namespaces": "Namespaces",
+    "participants": "Participants",
+    "profiles": "Profiles",
+    "rooms": "Rooms",
+    "sessions": "Sessions",
+    "spaces": "Spaces",
+    "users": "Users"
   }
 }
