--- a/locales/en/seo.json
+++ b/locales/en/seo.json
@@ -2,6 +2,7 @@
   "landing": {
     "404": "404 - Not Found",
     "about": "About",
+    "analytics": "Analytics",
     "credits": "Thank you.",
     "invite": "Invitation",
     "landing": "Sentrei - Bond. Focus. Work.",
