--- a/locales/zh/seo.json
+++ b/locales/zh/seo.json
@@ -2,6 +2,7 @@
   "landing": {
     "404": "404-找不到",
     "about": "关于",
+    "analytics": "分析工具",
     "credits": "谢谢。",
     "invite": "邀请函",
     "landing": "Sentrei - 键。焦点。工作。",
