--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -2,6 +2,7 @@
   "landing": {
     "404": "404お探しのページが見つかりませんでした",
     "about": "会社について",
+    "analytics": "分析",
     "credits": "ありがとうございます",
     "invite": "招待",
     "landing": "Sentrei - 繋がる。没頭。作業。",
