--- a/locales/zh/analytics.json
+++ b/locales/zh/analytics.json
@@ -1,5 +1,20 @@
 {
   "analytics": {
     "title": "分析工具"
+  },
+  "label": {
+    "activity": "活动",
+    "analytics": "分析工具",
+    "duration": "持续时间",
+    "invites": "邀请",
+    "members": "会员",
+    "namerooms": "命名室",
+    "namespaces": "命名空间",
+    "participants": "参加者",
+    "profiles": "个人资料",
+    "rooms": "房间数",
+    "sessions": "届会",
+    "spaces": "空间",
+    "users": "用户数"
   }
 }
