feat: 🎸 ini color for analytics bar chart

--- a/locales/en/analytics.json
+++ b/locales/en/analytics.json
@@ -1,4 +1,9 @@
 {
+  "actions": {
+    "member": "Member",
+    "room": "Room",
+    "session": "Session"
+  },
   "analytics": {
     "title": "Analytics"
   },
