perf: ⚡️ refactor pricing discount

--- a/locales/ja/pricing.json
+++ b/locales/ja/pricing.json
@@ -35,7 +35,7 @@
       "description5": "ヘルプセンターへのアクセス",
       "description6": "高度なユーザー設定",
       "landingText": "もっと詳しく知る",
-      "price": "3千円",
+      "price": "1500円",
       "subTitle": "最も人気のある",
       "title": "プロ"
     },
