--- a/locales/ja/billing.json
+++ b/locales/ja/billing.json
@@ -2,10 +2,12 @@
   "billing": {
     "free": {
       "memberLimit": "無料プランは10メンバーまでサポートします。",
+      "participantLimit": "無料プランは3人の参加者のみをサポートします。",
       "roomLimit": "無料プランは3部屋までサポートしています。",
       "upgrade": "2週間の無料トライアルが含まれるプロプランに今すぐアップグレード！"
     },
     "pro": {
+      "participantLimit": "プロプランは10人の参加者のみをサポートします。",
       "roomLimit": "無料プランは15部屋までサポートします。",
       "upgrade": "エンタープライズプランにアップグレードして、ニーズに最適です！"
     }
