perf: ⚡️ ini sentrei roadmap

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -12,6 +12,7 @@
     "privacy": "Privacy Policy",
     "product": "Product",
     "releases": "Releases",
+    "roadmap": "Roadmap",
     "social": "Social",
     "specialThanks": "Special thanks to our families, friends, and everyone who have made the journey possible",
     "support": "Support",
