--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -12,6 +12,7 @@
     "privacy": "個人情報保護方針",
     "product": "プロダクト",
     "releases": "リリース一覧",
+    "roadmap": "ロードマップ",
     "social": "SNS",
     "specialThanks": "家族、友人、そしてこの瞬間を可能にしてくれたすべての人に感謝します",
     "support": "サポート",
