--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -12,6 +12,7 @@
     "privacy": "隐私政策",
     "product": "产品",
     "releases": "发布",
+    "roadmap": "路线图",
     "social": "社会的",
     "specialThanks": "特别感谢我们的家人，朋友和所有使旅程成为可能的人",
     "support": "支持",
