feat: 🎸 refactor credits section

--- a/locales/en/analytics.json
+++ b/locales/en/analytics.json
@@ -10,6 +10,7 @@
   "label": {
     "activity": "Activity",
     "analytics": "Analytics",
+    "duration": "Duration",
     "invites": "Invites",
     "members": "Members",
     "namerooms": "Namerooms",
