--- a/locales/en/credits.json
+++ b/locales/en/credits.json
@@ -20,8 +20,11 @@
     },
     "friends": {
       "hibikiOtawara": "Hibiki Otawara",
+      "keiichiroKato": "Keiichiro Kato",
       "kojuFuruta": "Koju Furuta",
+      "ryoseiYasuda": "Ryosei Yasuda",
       "ryotaroSaishu": "Ryotaro Saishu",
+      "shuyaTateishi": "Shuya Tateishi",
       "yuiTonokawa": "Yui Tonokawa",
       "yusukeSatomi": "Yusuke Satomi"
     },
