feat: 🎸 ini footer section

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -4,6 +4,7 @@
     "analytics": "Analytics",
     "company": "Company",
     "cookies": "Cookies",
+    "demo": "Demo",
     "legal": "Legal",
     "mission": "Mission",
     "pitch": "Pitch",
