--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -4,6 +4,7 @@
     "analytics": "分析",
     "company": "会社",
     "cookies": "クッキー",
+    "demo": "デモ",
     "legal": "法律関係",
     "mission": "ミッション",
     "pitch": "ピッチ",
