--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -4,6 +4,7 @@
     "analytics": "分析工具",
     "company": "公司",
     "cookies": "饼干",
+    "demo": "演示版",
     "legal": "法律",
     "mission": "任务",
     "pitch": "沥青",
