perf: ⚡️ ini i18n seo

--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -4,6 +4,7 @@
     "about": "会社について",
     "analytics": "分析",
     "credits": "ありがとうございます",
+    "demo": "デモ",
     "invite": "招待",
     "landing": "Sentrei - 繋がる。没頭。作業。",
     "login": "ログインする",
