--- a/locales/zh/seo.json
+++ b/locales/zh/seo.json
@@ -4,6 +4,7 @@
     "about": "关于",
     "analytics": "分析工具",
     "credits": "谢谢。",
+    "demo": "演示版",
     "invite": "邀请函",
     "landing": "Sentrei - 键。焦点。工作。",
     "login": "登录",
