--- a/locales/en/seo.json
+++ b/locales/en/seo.json
@@ -4,6 +4,7 @@
     "about": "About",
     "analytics": "Analytics",
     "credits": "Thank you.",
+    "demo": "Demo",
     "invite": "Invitation",
     "landing": "Sentrei - Bond. Focus. Work.",
     "login": "Login",
