perf: ⚡️ refactor pricing button landing text

--- a/locales/en/pricing.json
+++ b/locales/en/pricing.json
@@ -34,7 +34,7 @@
       "description4": "10 users per room included",
       "description5": "Help center access",
       "description6": "Advanced User Configuration",
-      "landingText": "Learn more",
+      "landingText": "Pricing Details",
       "price": "$15",
       "subTitle": "Most popular",
       "title": "Pro"
