--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -3,9 +3,9 @@
     "bannerHeaderOne": "Bond.",
     "bannerHeaderThree": "Work.",
     "bannerHeaderTwo": "Focus.",
-    "bannerTextOne": "A dedicated video conferencing tool",
-    "bannerTextRough": "get things done",
-    "bannerTextThree": "- A focus oriented virtual workspace -",
+    "bannerTextOne": "A dedicated virtual workspace for teams",
+    "bannerTextRough": "do great work",
+    "bannerTextThree": "- An enhanced virtual workspace -",
     "bannerTextTwo": "that helps you ",
     "googleText": "Sign up with Google",
     "startText": "Get Started Now (Beta)"
