feat: 🎸 ini media page

--- a/locales/en/seo.json
+++ b/locales/en/seo.json
@@ -8,6 +8,7 @@
     "invite": "Invitation",
     "landing": "Sentrei - Bond. Focus. Work.",
     "login": "Login",
+    "media": "Media",
     "pitch": "Pitch",
     "pricing": "Pricing",
     "privacy": "Privacy Policy",
