--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -8,6 +8,7 @@
     "invite": "招待",
     "landing": "Sentrei - 繋がる。没頭。作業。",
     "login": "ログインする",
+    "media": "メディア",
     "pitch": "ピッチ",
     "pricing": "価格",
     "privacy": "個人情報保護方針",
