--- a/locales/zh/seo.json
+++ b/locales/zh/seo.json
@@ -8,6 +8,7 @@
     "invite": "邀请函",
     "landing": "Sentrei - 键。焦点。工作。",
     "login": "登录",
+    "media": "媒体",
     "pitch": "沥青",
     "pricing": "价钱",
     "privacy": "隐私政策",
