perf: ⚡️ ini media i18n and footer

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -6,6 +6,7 @@
     "cookies": "Cookies",
     "demo": "Demo",
     "legal": "Legal",
+    "media": "Media",
     "mission": "Mission",
     "pitch": "Pitch",
     "preferences": "Preferences",
