--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -6,6 +6,7 @@
     "cookies": "クッキー",
     "demo": "デモ",
     "legal": "法律関係",
+    "media": "メディア",
     "mission": "ミッション",
     "pitch": "ピッチ",
     "preferences": "環境設定",
