--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -6,6 +6,7 @@
     "cookies": "饼干",
     "demo": "演示版",
     "legal": "法律",
+    "media": "媒体",
     "mission": "任务",
     "pitch": "沥青",
     "preferences": "优先",
