--- a/locales/en/pitch.json
+++ b/locales/en/pitch.json
@@ -4,6 +4,7 @@
     "title": "Pitch"
   },
   "section": {
-    "one": "#001 45-Second Pitch"
+    "one": "#001 45-Second Pitch",
+    "two": "#002 1-Minute Pitch"
   }
 }
