perf: ⚡️ ini pioneer section

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -8,6 +8,7 @@
     "legal": "Legal",
     "media": "Media",
     "mission": "Mission",
+    "pioneer": "Pioneer",
     "pitch": "Pitch",
     "preferences": "Preferences",
     "pricing": "Pricing",
