--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -8,6 +8,7 @@
     "legal": "法律",
     "media": "媒体",
     "mission": "任务",
+    "pioneer": "先锋",
     "pitch": "沥青",
     "preferences": "优先",
     "pricing": "价钱",
