--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -8,6 +8,7 @@
     "legal": "法律関係",
     "media": "メディア",
     "mission": "ミッション",
+    "pioneer": "開拓者",
     "pitch": "ピッチ",
     "preferences": "環境設定",
     "pricing": "価格",
