feat: 🎸 ini footer sentrei

--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -16,6 +16,7 @@
     "product": "プロダクト",
     "releases": "リリース一覧",
     "roadmap": "ロードマップ",
+    "sentrei": "私たちは人々が素晴らしい仕事をするのを助けるためにここにいます。",
     "social": "SNS",
     "specialThanks": "家族、友人、そしてこの瞬間を可能にしてくれたすべての人に感謝します",
     "support": "サポート",
