--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -16,6 +16,7 @@
     "product": "Product",
     "releases": "Releases",
     "roadmap": "Roadmap",
+    "sentrei": "We are here to help people do great work.",
     "social": "Social",
     "specialThanks": "Special thanks to our families, friends, and everyone who have made the journey possible",
     "support": "Support",
