--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -16,6 +16,7 @@
     "product": "产品",
     "releases": "发布",
     "roadmap": "路线图",
+    "sentrei": "我们在这里帮助人们做得很好。",
     "social": "社会的",
     "specialThanks": "特别感谢我们的家人，朋友和所有使旅程成为可能的人",
     "support": "支持",
