feat: 🎸 completely refactor direction of landing page

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -25,9 +25,9 @@
     "thankYou": "Thanks to you"
   },
   "mission": {
-    "mission": "We are here to help people do great work",
+    "mission": "We are here to help people focus",
     "special": "Especially, those who strive to do great work",
-    "target": "We build products for all people who work together online.",
+    "target": "We build products for all teams who work together online.",
     "title": "Our Mission"
   },
   "team": {
