--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -4,8 +4,8 @@
     "bannerHeaderThree": "Work.",
     "bannerHeaderTwo": "Focus.",
     "bannerTextOne": "A dedicated virtual workspace for teams",
-    "bannerTextRough": "do great work",
-    "bannerTextThree": "- An enhanced virtual workspace -",
+    "bannerTextRough": "focus",
+    "bannerTextThree": "- An focus-oriented virtual workspace -",
     "bannerTextTwo": "that helps you ",
     "googleText": "Sign up with Google",
     "startText": "Get Started Now (Beta)"
