feat: 🎸 ini landing header menu company & resources

--- a/locales/en/header.json
+++ b/locales/en/header.json
@@ -12,6 +12,7 @@
     "support": "Support"
   },
   "header": {
+    "company": "Company",
     "login": "Log In",
     "product": "Product",
     "resources": "Resources",
