perf: ⚡️ refactor footer section

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -15,6 +15,7 @@
     "privacy": "Privacy Policy",
     "product": "Product",
     "releases": "Releases",
+    "resources": "Resources",
     "roadmap": "Roadmap",
     "sentrei": "We help people focus to do great work.",
     "social": "Social",
