feat: 🎸 ini landing header menu resources

--- a/locales/en/header.json
+++ b/locales/en/header.json
@@ -34,5 +34,19 @@
       "description": "See the pricing table",
       "title": "Pricing"
     }
+  },
+  "resources": {
+    "pioneer": {
+      "description": "Our open journal",
+      "title": "Pioneer"
+    },
+    "releases": {
+      "description": "Product release log",
+      "title": "Releases"
+    },
+    "roadmap": {
+      "description": "Official product roadmap",
+      "title": "Roadmap"
+    }
   }
 }
