perf: ⚡️ ini i18n header & footer

--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -15,6 +15,7 @@
     "privacy": "個人情報保護方針",
     "product": "プロダクト",
     "releases": "リリース一覧",
+    "resources": "リソース",
     "roadmap": "ロードマップ",
     "sentrei": "私たちは人々が素晴らしい仕事をするのを助けるためにここにいます。",
     "social": "SNS",
