--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -15,6 +15,7 @@
     "privacy": "隐私政策",
     "product": "产品",
     "releases": "发布",
+    "resources": "资源资源",
     "roadmap": "路线图",
     "sentrei": "我们在这里帮助人们做得很好。",
     "social": "社会的",
