--- a/locales/en/header.json
+++ b/locales/en/header.json
@@ -5,7 +5,7 @@
       "title": "About"
     },
     "analytics": {
-      "description": "Open analytics of our product",
+      "description": "Open analytics of Sentrei",
       "title": "Analytics"
     },
     "media": {
@@ -37,7 +37,7 @@
   },
   "resources": {
     "pioneer": {
-      "description": "Our open journal",
+      "description": "Our open pioneer journal",
       "title": "Pioneer"
     },
     "releases": {
