perf: ⚡️ refactor landing banner

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -25,7 +25,7 @@
     "thankYou": "Thanks to you"
   },
   "mission": {
-    "mission": "We help people focus to do great work",
+    "mission": "We help teams do great work",
     "special": "Especially, those who strive to do great work",
     "target": "We build products for all teams who work together online.",
     "title": "Our Mission"
