--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -17,7 +17,7 @@
     "releases": "Releases",
     "resources": "Resources",
     "roadmap": "Roadmap",
-    "sentrei": "We help people focus to do great work.",
+    "sentrei": "We help teams do great work.",
     "social": "Social",
     "specialThanks": "Special thanks to our families, friends, and everyone who have made the journey possible",
     "support": "Support",
