feat: 🎸 ini landing outline

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -28,6 +28,14 @@
     "titleThree": "Meet personal goals",
     "titleTwo": "Focus Oriented"
   },
+  "outline": {
+    "problem":{
+      "one": "It's",
+      "rough": "hard",
+      "two": "to see what's going on in remote work."
+    },
+    "solution": "We think we can change that."
+  },
   "product": {
     "bottomSubTitle": "Our data analytics team will track everyone's presence on the workspace and present you with real-time updates for team productivity and efficiency, so that you can get your work done.",
     "bottomTitleOne": " ",
