perf: ⚡️ ini i18n landing outline

--- a/locales/ja/index.json
+++ b/locales/ja/index.json
@@ -28,6 +28,14 @@
     "titleThree": "目標を達成",
     "titleTwo": "フォーカス指向"
   },
+  "outline": {
+    "problem": {
+      "one": "それは",
+      "rough": "ハード",
+      "two": "リモートワークで何が起こっているかを確認します。"
+    },
+    "solution": "私たちはそれを変えることができると思います。"
+  },
   "product": {
     "bottomSubTitle": "当社のデータ分析チームは、ワークスペースでの全員のプレゼンスを追跡し、チームの生産性と効率のためのリアルタイムのインサイトを可能にします",
     "bottomTitleOne": " ",
